# CS392

./: CMakeLists.txt  README.md  contact.txt  ifelse.sh  interface_lab1.sh  lazycommit.sh  sorted_uniq.txt
bash_examples/: array.sh  contacts.txt  ifelse.sh  interface.sh  pipe1.sh
hw1/test/: junk.sh
hw2/hw2_starter_code/: a.out  bubble.c  bubble.h  bubblesort  main.c  makefile  testdouble  utils.c  utils.h
hw2/hw2_starter_code/submission/: bubble.c  makefile
hw3/: main.c  makefile  oocmerge.c  oocmerge.h  output
hw3.2/: main.c  makefile
hw3/submission/: makefile
hw3/submission2.o/: main.c  oocmerge.c
hw4/: makedir.txt  makefile  maxfile  maxfile.c
hw4/my_directory/: cat.txt  touch.txt
hw4/my_directory/subdirectory1/: chown.txt  ls.txt
hw4/my_directory/subdirectory2/: clear.txt  mkdir.txt  mv.txt
hw4/submission/: makefile
hw4/temp/: text.txt  text1.txt
hw4/temp2/: chmod.txt
hw4/tempflat/: git.txt  ls.txt
hw5/: harris  harris.c  msh.c  sighandler.c  sighandler.h
hw5/submission/: makefile  msh.c
hw6/: a.out  makefile
hw6/submission/: hw6.c  makefile
hw7/: client  client.c  server  server.c
hw7v2/: client.c  server.c
labs/: a.out  lab2_fn_pointers (1)  lab2_fn_pointers (1).c  lab2_fn_pointers.c  lab3.files  lab3_files  lab3_files.c  output2.txt  output_txt
labs/lab5/: fork_intro.c  lab5  lab5_fork.c
labs/lab6/: lab6_nforks(2).c  lab6_nforks.c  randomleep2.c  randomsleep2
labs/lab7/: lab7_prompt.c
labs/lab8/: lab8  lab8_pipe_add.c
labs/lab9/: lab9_findserver.c  server_m1
socket_examples/: BrownyLin_server.c
(+6 files in other folders)
